Cleaned up pom